# whetstone

./: README.md  WHETSTONE_PROCEDURE.md  WHETSTONE_STAGE5_REWARD_DESIGN.md  deps.md  gemma4_learnings.md  pyproject.toml
configs/: accelerate_ddp.yaml  accelerate_fsdp2.yaml
scripts/: audit_compressions.py  build_eval_sets.py  build_train_pool.py  calc_metrics.py  compress_local_versionB.py  dev_container.sh  harvest.py  install_deps.sh  merge_fsdp2_to_hf.py  perplexity_score.py  run_eval.py  sft_train.py  smoke_verify.py  verify_harvest.py
whetstone/: __init__.py  verify.py
whetstone/patches/: __init__.py  gemma4_liger_patch.py  gemma4_vllm_patch.py
whetstone/reward/: __init__.py  aggregate.py  config.py  diagnostics.py  extract.py  penalties.py  structure.py  tiers.py
